# rec-conv-transcriptor

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 36bec997b605_initial_schema.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AudioPlayer.tsx  FileUploader.tsx  Layout.tsx  SegmentTimeline.tsx  StatsCard.tsx  StatusBadge.tsx  TranscriptViewer.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: Dashboard.tsx  Pipeline.tsx  RecordingDetail.tsx  Recordings.tsx  Search.tsx
src/transcriptor/: __init__.py  __main__.py  config.py  main.py  pipeline.py
src/transcriptor/api/: query.py  server.py
src/transcriptor/db/: database.py  models.py
src/transcriptor/diarizer/: __init__.py  pyannote_service.py
src/transcriptor/transcriber/: __init__.py  whisper_service.py
src/transcriptor/watcher/: folder_watcher.py
